# chain_move

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  chainmove_prd.md  eslint.config.mjs  js.md  middleware.ts  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  styles.md  tailwind.config.ts
.github/: pull_request_template.md
actions/: notification.ts  user.ts
app/: CustomConnectWallet.tsx  Providers.tsx  globals.css  layout.tsx  page.tsx
components/: chain-move-logo.tsx  client-layout.tsx  theme-toggle.tsx
contexts/: platform-context.tsx
docs/: CONTRIBUTING.md  DEPLOYMENT.md  MANUAL_BUILD.md  README-DEV.md  README.md  RELEASE_CHECKLIST.md  SUMMARY.md  book.json  build.js  contributor-safety-and-stellar-roadmap.md  package.json  pdf-config.js
hooks/: use-auth.ts  use-currency.ts  use-toast.ts
lib/: currency.ts  dbConnect.ts  mongodb.ts
models/: AuditLog.ts  DriverPayment.ts  DriverVirtualAccount.ts  HirePurchaseContract.ts  Investment.ts  InvestmentPool.ts  InvestorCredit.ts  InvestorVirtualAccount.ts  Issue.ts  KYC.ts  Loan.ts  Notification.ts  PlatformSetting.ts  PoolInvestment.ts  ProcessedGatewayEvent.ts  Transaction.ts  User.ts  Vehicle.ts
public/: robots.txt  schema.org.json  sitemap-0.xml  sitemap.xml
solana/chain_move/programs/chain_move/: Cargo.toml
solana/chain_move/programs/chain_move/src/: accounts.rs  errors.rs  events.rs  governance.rs  investment_pool.rs  lib.rs  revenue_sharing.rs  vehicle_nft.rs
styles/: globals.css
types/: index.ts
(+402 files in other folders)
